Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4020

libmyodbc relocation error with MariaDB on CentOS 5

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.0, 5.5.28a
    • 5.5.31, 5.3.12
    • None

    Description

      libmyodbc on this system is not usable with MariaDB MySQL compatibility layer (MariaDB-compat) due to relocation error. This can be demonstrated with isql or iusql utilities from unixODBC package (unixODBC64 will do as well):

      [root@a10-52-75-225 ~]# echo "" | isql -b apsc
      isql: relocation error: /usr/lib64/libmyodbc3.so: symbol strmov, version libmysqlclient_15 not defined in file libmysqlclient.so.15 with link time reference
      [root@a10-52-75-225 ~]# strings /usr/lib64/libmyodbc3.so | grep strmov
      strmov
      [root@a10-52-75-225 ~]# strings /usr/lib64/libmysqlclient.so.15 | grep strmov
      [root@a10-52-75-225 ~]# rpm -qf /usr/lib64/libmysqlclient.so.15
      MariaDB-compat-10.0.0-1
      [root@a10-52-75-225 ~]# rpm -qf /usr/lib64/libmyodbc3.so
      mysql-connector-odbc-3.51.26r1127-2.el5

      This assumes following sample odbc configuration:

      [root@a10-52-75-225 ~]# cat /etc/odbc.ini
      [apsc]
      Description = Sample MySQL database (DSN)
      Driver      = MySQL
      SERVER      = localhost
      USER        = apsc
      PASSWORD    = HDA0edvGpCvs
      PORT        = 3306
      DATABASE    = apsc
       
      [root@a10-52-75-225 ~]# tail -n 9 /etc/odbcinst.ini
      [MySQL]
      Description = Sample MySQL driver
      Driver      = /usr/lib64/libmyodbc3.so
      Setup       =
      FileUsage   = 1
      Driver64    = /usr/lib64/libmyodbc3.so
      Setup64     =
      UsageCount  = 1

      This was done on CentOS 5 x64 machine with MariaDB 10.0, but same issues were observed with MariaDB 5.5. Also this most probably happens on other architectures and RedHat el5, maybe on RedHat/CentOS 6 as well.

      Attachments

        Activity

          People

            dbart Daniel Bartholomew
            dfl Nicolay Vizovitin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 4.5h
                4.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.